--- a/style.css
+++ b/style.css
@@ -393,3 +393,10 @@ section{
     flex-direction: column;
   }
 }
+
+.background-clip{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
