--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ span{
   font-size: 1.8rem;
   padding: 1rem 2rem;
   border-radius: 3rem;
-    background: linear-gradient(
+  background: linear-gradient(
     270deg,
     rgb(240, 74, 8) 10%,
     rgb(172, 0, 0) 100%
@@ -83,9 +83,16 @@ span{
   color: black;
   border: none;
   text-wrap: nowrap;
+  -webkit-text-stroke: black;
 }
 .gradient-btn:hover{
-  transform: scale(1.05);
+  transform: scale(1.1);
+  box-shadow: orange;
+  background-color: black;
+  color: black;
+  box-shadow: orange;
+  stroke-width: 2rem;
+  box-shadow: 0 0 25px var(--main-color);
 }
 
 section{
