--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ body{
 span{
   background: linear-gradient(
     270deg,
-    rgb(240, 74, 8) 10%,
-    rgb(172, 0, 0) 100%
+    rgb(24, 216, 3) 10%,
+    rgb(37, 172, 0) 100%
   );
   background-clip: text;
   color: transparent;
@@ -75,8 +75,8 @@ span{
   border-radius: 3rem;
   background: linear-gradient(
     270deg,
-    rgb(240, 74, 8) 10%,
-    rgb(172, 0, 0) 100%
+    rgb(24, 216, 3) 10%,
+    rgb(37, 172, 0) 100%
   );
   cursor: pointer;
   transition: 0.3s ease-in-out;
@@ -87,10 +87,10 @@ span{
 }
 .gradient-btn:hover{
   transform: scale(1.1);
-  box-shadow: orange;
+  box-shadow: rgb(128, 212, 1);
   background-color: black;
   color: black;
-  box-shadow: orange;
+  box-shadow: rgb(128, 212, 1);
   stroke-width: 2rem;
   box-shadow: 0 0 25px var(--main-color);
 }
@@ -129,13 +129,13 @@ section{
 .home-img img{
   width: 32vw;
   border-radius: 50%;
-  box-shadow: 0 0 25px var(--main-color);
+  box-shadow: 0 0 25px rgb(125, 208, 2);
   transition: 0.4s ease-in-out;
 }
 .home-img img:hover{
-  box-shadow: 0 0 25px var(--main-color),
-              0 0 50px var(--main-color),
-              0 0 100px var(--main-color);
+  box-shadow: 0 0 25px rgb(125, 208, 2),
+              0 0 50px rgb(125, 208, 2),
+              0 0 100px rgb(125, 208, 2);
 }
 .btn-group{
   display: flex;
@@ -181,13 +181,13 @@ section{
 .about-img img{
   width: 32vw;
   border-radius: 50%;
-  box-shadow: 0 0 25px var(--main-color);
+  box-shadow: 0 0 25px rgb(125, 208, 2);
   transition: 0.4s ease-in-out;
 }
 .about-img img:hover{
-  box-shadow: 0 0 25px var(--main-color),
-              0 0 50px var(--main-color),
-              0 0 100px var(--main-color);
+  box-shadow: 0 0 25px rgb(125, 208, 2),
+              0 0 50px rgb(125, 208, 2),
+              0 0 100px rgb(125, 208, 2);
 }
 .about-content h2{
   font-size: 7rem;
