--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+  * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -51,8 +51,8 @@ body{
 span{
   background: linear-gradient(
     270deg,
-    rgb(24, 216, 3) 10%,
-    rgb(37, 172, 0) 100%
+    rgb(255, 136, 1) 10%,
+    rgb(207, 0, 0) 100%
   );
   background-clip: text;
   color: transparent;
@@ -75,8 +75,8 @@ span{
   border-radius: 3rem;
   background: linear-gradient(
     270deg,
-    rgb(24, 216, 3) 10%,
-    rgb(37, 172, 0) 100%
+    rgb(255, 136, 1) 10%,
+    rgb(207, 0, 0) 100%
   );
   cursor: pointer;
   transition: 0.3s ease-in-out;
@@ -87,12 +87,12 @@ span{
 }
 .gradient-btn:hover{
   transform: scale(1.1);
-  box-shadow: rgb(128, 212, 1);
+  box-shadow: rgb(212, 71, 1);
   background-color: black;
   color: black;
-  box-shadow: rgb(128, 212, 1);
+  box-shadow: rgb(212, 71, 1));
   stroke-width: 2rem;
-  box-shadow: 0 0 25px rgb(125, 208, 2);
+  box-shadow: 0 0 25px rgb(212, 71, 1);
 }
 
 section{
