--- a/style.css
+++ b/style.css
@@ -412,3 +412,7 @@ section{
   bottom: 0;
   z-index: -1;
 }
+body{
+  background-image: url(/SupermassiveBinaryBlackHoles_desktop.png);
+  background-size: contain;
+}
