--- a/style.css
+++ b/style.css
@@ -413,6 +413,6 @@ section{
   z-index: -1;
 }
 body{
-  background-image: url(/SupermassiveBinaryBlackHoles_desktop.png);
+  background-image: url(/meh (1).png);
   background-size: contain;
 }
