--- a/style.css
+++ b/style.css
@@ -413,6 +413,6 @@ section{
   z-index: -1;
 }
 body{
-  background-image: url(/meh (1).png);
+  background-image: url(wp13445140-gray-mountains-wallpapers.png);
   background-size: contain;
 }
